@@ -1,3 +1,6 @@
+> Removed distance slider in second tab
+> Made one mass red in the first tab
+> Made the sun yellow
 # 0.01.10 (33289) Jul 13, 2009
 > added a missing translation string
 # 0.01.09 (33287) Jul 13, 2009
